fix overlap issue

--- a/ide/style.sass
+++ b/ide/style.sass
@@ -34,13 +34,14 @@ body
     .content
         background: #2a2a2a
         height: 100%
+        margin-left: Clamp(2rem, 3vw, 100px)
 
         > div
             display: none
         > div.open
             display: block
             position: relative
-            width: Clamp(8rem, 14vw, 400px) 
+            width: Clamp(6rem, 10vw, 400px) 
 
         #files
             display: flex
